client-assets/client.scss
/* ... */
.navbar #mega-menu-wrap-primary #mega-menu-primary>li.mega-menu-item>a.mega-menu-link:hover,
.navbar.navbar-small #mega-menu-wrap-primary #mega-menu-primary>li.mega-menu-item>a.mega-menu-link:hover {
  color: $primary;
}

.navbar.navbar-small #mega-menu-wrap-primary #mega-menu-primary>li.mega-menu-item>a.mega-menu-link {
  text-shadow: none;
  color: #000;
}

@media only screen and (max-width: 991px) and (min-width: 1px) {
  .mega-menu-primary-mobile-open .navbar.fixed-top #mega-menu-wrap-primary #mega-menu-primary {
    top: 45px;
  }
}

@media only screen and (max-width: 768px) {
  .navbar #mega-menu-wrap-primary #mega-menu-primary>li.mega-menu-item>a.mega-menu-link {
    color: #000;
    text-shadow: none;
  }
}

.c9-h,
.c9-h.h,
.c9-txl,
.display-1,
.display-2,
.display-3,
.display-4,
.display-5,
.display-6 {
  font-family: $headings-font-family;
  line-height: 1.1;
}

p.wp-block-subhead,
.subhead-h,
.c9-sh,
.text-muted,
.cortextoo .c9-sh,
.cortextoo .text-muted {
  font-family: 'wisdom-script', $font-family-sans-serif;
  color: #FEC50A;
}

.text-muted {
  color: #FEC50A !important;
}

.editor-styles-wrapper p.wp-block-subhead,
.editor-styles-wrapper .subhead-h,
.editor-styles-wrapper .c9-sh,
.editor-styles-wrapper .c9-heading h1.subhead-h1,
.editor-styles-wrapper .c9-heading h2.subhead-h2,
.editor-styles-wrapper .c9-heading h3.subhead-h3,
.editor-styles-wrapper .c9-heading h4.subhead-h4,
.editor-styles-wrapper .c9-heading h5.subhead-h5,
.editor-styles-wrapper .c9-heading h6.subhead-h6 {
  font-family: 'wisdom-script', $font-family-sans-serif;
  font-weight: 700;
}

.entry-content,
.editor-styles-wrapper p,
.editor-styles-wrapper .container p,
.editor-styles-wrapper .editor-rich-text .mce-content-body p,
.editor-styles-wrapper .wp-block-paragraph,
.editor-styles-wrapper .wp-block-quote p,
.editor-styles-wrapper .wp-block-file,
.wp-block-pullquote,
.wp-block-pullquote blockquote p,
.editor-default-block-appender textarea.editor-default-block-appender__content,
#wrapper-footer {
  font-size: 2rem;
  word-wrap: break-word;
  font-family: $font-family-base;
}

.entry-content h1,
.entry-content .h1,
.wp-block-heading h1,
.entry-header h1,
.entry-content h1.c9-txl {
  font-size: 7.9rem;
  line-height: .9;
}

.entry-content h2,
.entry-content .h2,
.wp-block-heading h2 {
  font-size: 5.6rem;
  line-height: .9;
}

.entry-content h3,
.entry-content .h3,
.wp-block-heading h3 {
  font-size: 4rem;
  line-height: .9;
}

.entry-content h4,
.entry-content .h4,
.wp-block-heading h4 {
  font-size: 2.8rem;
  line-height: .9;
}

.entry-content h5,
.entry-content .h5,
.wp-block-heading h5 {
  font-size: 2rem;
  line-height: .9;
}

.entry-content h6,
.entry-content .h6,
.wp-block-heading h6 {
  font-size: 1.4rem;
  line-height: .9;
}

.entry-header h2 {
  font-size: 3rem;
  line-height: .9;
}

.xxl-heading .c9-txl {
  font-size: 180px !important;
  line-height: .9;
  letter-spacing: 0.02rem;
}

.c9-heading .c9-sh {
  margin-bottom: 1.8rem;
}

/* Responsive Typography */
@media only screen and (max-width: 575px) {

  .entry-content p[class$="-font-size"] {
    line-height: 1;
  }
}

@media only screen and (min-width: 1px) {

  /* section heading accents */
  .editor-styles-wrapper .editor-rich-text .section-heading-accent,
  .section-heading-accent,
  .editor-styles-wrapper .editor-rich-text .section-heading-accent-alt,
  .section-heading-accent-alt,
  .entry-content .section-heading-accent-alt,
  .entry-content h3.section-heading-accent,
  .entry-content h3.section-heading-accent-alt {
    margin: 10px auto;
    font-size: 1.6rem;
    font-weight: 500;
    line-height: 1;
    letter-spacing: 0.08rem;
    text-align: center;
    text-transform: uppercase;
    color: $dark;
  }
}

@media only screen and (min-width: 768px) {

  /* subheadings */
  .entry-content .subheading1,
  .entry-content .subheading2,
  .entry-content .subheading3,
  .entry-content .subheading4,
  .entry-content .subheading5,
  .wp-block-heading .subheading1,
  .wp-block-heading .subheading2,
  .wp-block-heading .subheading3,
  .wp-block-heading .subheading4,
  .wp-block-heading .subheading5 {
    font-weight: 400;
    font-size: 2.6rem;
    letter-spacing: 0.055rem;
  }

  .entry-content .subheading2,
  .wp-block-heading .subheading2,
  .subheading2 {
    font-weight: 500;
    font-size: 2.3rem;
    letter-spacing: 0.12rem;
  }

  .entry-content .subheading3,
  .wp-block-heading .subheading3,
  .subheading3 {
    font-weight: 100;
    font-size: 2rem;
    letter-spacing: 0.05rem;
    text-transform: uppercase;
    line-height: 1.2;
  }

  .entry-content .subheading4,
  .wp-block-heading .subheading4,
  .subheading4 {
    font-size: 1.6rem;
    letter-spacing: 0.001rem;
  }

  .entry-content .subheading5,
  .wp-block-heading .subheading5,
  .subheading5 {
    font-size: 1.4rem;
    letter-spacing: 0.125rem;
    font-weight: $font-weight-normal;
  }

  .icon-label,
  .entry-content .icon-label,
  .wp-block-heading .icon-label {
    text-transform: uppercase;
    font-weight: $font-weight-bold;
    font-size: 1.8rem !important;
    letter-spacing: 0.2rem;
    line-height: 1.1;
  }

  .entry-meta,
  .entry-meta a {
    text-transform: uppercase;
    letter-spacing: 0.05rem;
    line-height: 1;
    font-size: 1.4rem;
    color: $gray-700;
  }

  .entry-footer .comments-link {
    display: block;
    text-align: right;
    text-transform: uppercase;
    font-size: 1.2rem;
  }

  /* WordPress Gutenberg Font Sizes */
  .has-small-font-size {
    font-size: 1.4rem !important;
    line-height: 1.5 !important;
    letter-spacing: 0.125rem;
  }
}

.editor-styles-wrapper .heading-bar-black,
.entry-content .heading-bar-black {
  display: block;
  text-align: center;
  text-transform: uppercase;
  font-family: $font-family-base;
  font-size: 20px;
  min-height: 18px;
  color: #000000;
  background-color: #000000;
  letter-spacing: 0.06px;
  line-height: 1;
  overflow: hidden;
  margin-bottom: 20px !important;
}
/* ... */

